--- a/env/for-vim/vimrc.rc
+++ b/env/for-vim/vimrc.rc
@@ -1,12 +1,25 @@
-
+" 
+" vim config. Install it using : ln -s -f vimrc.rc ~/.vimrc
+"
+" author: amit213
+"
 
 syntax on
 
 set nu
 
 set ai
-set background=light
+"set background=light
 set ts=4
 set sw=4
 set spell 
 set spl=en
+
+" Use the solarized color scheme.
+"
+syntax enable
+"set background=dark
+"colorscheme solarized
+
+colorscheme evening
+"colorscheme darkblue
