--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -9,7 +9,7 @@ echo "Mr. Anderson, Welcome Home."
 #shell prompt facelift
 #export PS1="\u@\h:[\W]$ "
 export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
-#green colored.  export PS1="\e[1;32m\u@\h \w> \e[m"
+
 
 ## global variables
 		osname=`uname`
@@ -59,16 +59,21 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 
 			# check if file exists
 			is_file_present() {
+				 flag=0
 					dbg_print echo "checking if file: $1 exists."
-					if [ ! -s $1 ] 
+					if [  -L $1 ] 
 					then
-								echo "file $1 does not exists"
-								
+								dbg_print echo "$1 is a link and was found."
+								flag=1
+					elif [[ -f $1 ]]
+					then
+								dbg_print	echo "$1 is a file and was found."
+								flag=1
 					elif [[ -s $1 ]]; then
-						  echo "file $1 found."
-						  
+						  dbg_print echo "file $1 found."
 					fi
-					return $file_present 
+					echo $flag
+					return $flag 
 			}
 
 			## Use this for OSX specific env config.
@@ -87,14 +92,20 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 			## Use this for Linux specific env config.
 			set_linux_conf() {
 					dbg_print echo "setting Linux env config."
-					alias ls='ls --colors'
+					alias ls='ls --color=auto'
+			}
+
+			apply_env_cfg() {
+				 is_file_present ~/.myshellrc.rc
+					already_installed=$?
+					if [[ $already_installed == 1 ]] 
+					then
+					 echo "previous installation detected."
+					fi
 			}
 
 			set_common_env_conf() {
 					dbg_print echo "setting generic env config for all OS."
-					
-					#is_file_present ~/.myshellrc 
-					#is_file_present ~/foo.txt
 			}
 
 			set_os_specific_conf() {
@@ -109,7 +120,6 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 			}
 
 ## ==========
-
 	
 set_os_specific_conf $osname_lowercase
 
