--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -54,7 +54,7 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 			dbg_print() {
 					is_debug_mode_on
 				 dbg=$?
-				 [ $dbg == 1 ] && $@
+				 [ $dbg -eq 1 ] && $@
 			}
 
 			# check if file exists
@@ -98,7 +98,7 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 			apply_env_cfg() {
 				 is_file_present ~/.myshellrc.rc
 					already_installed=$?
-					if [[ $already_installed == 1 ]] 
+					if [ $already_installed -eq 1 ]
 					then
 					 echo "previous installation detected."
 					fi
