ssh alias update.

--- a/env/for-vim/vimrc.rc
+++ b/env/for-vim/vimrc.rc
@@ -10,10 +10,10 @@ set nu
 
 set ai
 "set background=light
-set ts=4
-set sw=4
-set spell 
-set spl=en
+"set ts=4
+"set sw=4
+"set spell 
+"set spl=en
 
 " Use the solarized color scheme.
 "
