--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -17,6 +17,7 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
   osname_lowercase=`uname | tr '[:upper:]' '[:lower:]'`
   hostname=`hostname`
   myshellrcfilename=".myshellrc.rc"
+  tagfilenamealiasmap="aliasmap"
 
 
 #local section
@@ -138,9 +139,46 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
      fi
    }
 
+
+   #save tmp file - list and order of params 
+   # 1:$USER  2:$tag 3:$shortform 4:$aliasstr 
+   save_to_tmp_file_with_tagname() {
+     filename1=.$USER-$tagfilenamealiasmap-list.tmp
+     dbg_print echo "all: $@"
+     echo "$aliasstr" >> ~/$filename1          
+   }
+
+   #test run for the set alias.
+   set_alias() {
+     dbg_print echo "param: $@"
+     allparams=$@
+     shortform=$(echo $allparams | awk '{print $1}')
+     pRest=$(echo $allparams | awk '{$1="";print $0}')
+     dbg_print echo "list of param- 1:$shortform Rest:$pRest"
+     #set the alias in system
+     alias $shortform='$pRest'
+     aliasstr="alias '$shortform=$pRest'"
+     dbg_print echo "final str: $aliasstr"
+     save_to_tmp_file_with_tagname $USER $tagfilenamealiasmap $shortform $aliasstr
+   }
+
+   #load and run tmp alias map list
+   load_run_tmp_aliasmaplist() {
+     is_file_present ~/.$USER-$tagfilenamealiasmap-list.tmp
+     already_installed=$?
+     if [ $already_installed -eq 1 ]
+     then
+      source ~/.$USER-$tagfilenamealiasmap-list.tmp
+     fi
+   }
+
    set_common_env_conf() {
      dbg_print echo "setting generic env config for all OS."
+     export PATH=$PATH:/opt/local/bin:/opt/local/sbin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin
      set_ssh_alias
+     alias pg='ping google.com'
+     alias seta=set_alias
+     alias gg=load_run_tmp_aliasmaplist
    }
 
    set_os_specific_conf() {
