--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1,6 +1,7 @@
 #!/bin/sh
 #!/bin/bash
 #ss 
+#author :: amit213
 #revisions
 
 ## This is the long running shell rc..
@@ -42,37 +43,55 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 
 
 
-
-
-
 ## ==========
 #global functions
    is_debug_mode_on() {
-     #turn off debug mode
+     #turn ON(1) off(0) debug mode
      return 0
-     #turn ON debug mode
-     #return 1
    }
-   dbg_print() {
+   dbg_print_on() {
      is_debug_mode_on
      dbg=$?
      [ $dbg -eq 1 ] && $@
+   }
+   dbg_print() {
+     is_debug_mode_on
+     dbgflag=$?
+     callerapi=${FUNCNAME[1]}
+     linenumb=${LINENO}
+     if [ $dbgflag -eq 1 ] && [ "$@" ]
+     then
+        #empty param. we will just print the stack.
+        #echo "$callerapi:"
+        msgval="$@"       
+        echo "$callerapi: $msgval"        
+     else
+        #do nothing. 
+        msgval="$@"        
+     fi
+   }
+   myecho() {
+      funcname=$1
+      #msgval = entire msg except for the first param.
+      msgval=$(echo $@ | awk '{$1="";print $0}')
+      echo "$1 :$msgval"
    }
 
    # check if file exists
    is_file_present() {
      flag=0
-     dbg_print echo "checking if file: $1 exists."
+     dbg_print "checking if file: $1 exists."
      if [  -L $1 ] 
      then
-        dbg_print echo "$1 is a link and was found."
+        dbg_print "$1 is a link and was found."
         flag=1
      elif [[ -f $1 ]]
      then
-        dbg_print echo "$1 is a file and was found."
+        dbg_print "$1 is a file and was found."
         flag=1
-     elif [[ -s $1 ]]; then
-        dbg_print echo "file $1 found."
+     elif [[ -s $1 ]]
+     then
+        dbg_print "file $1 found."
      fi
      return $flag 
    }
@@ -112,7 +131,7 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 
    ## Use this for OSX specific env config.
    set_osx_conf() {
-     dbg_print echo "setting OSX env config."
+     dbg_print "setting OSX env config."
      #ls gets colors
      export CLICOLOR=1
      #export LSCOLORS=Exfxcxdxbxegedabagacad
@@ -126,7 +145,7 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
 
    ## Use this for Linux specific env config.
    set_linux_conf() {
-     dbg_print echo "setting Linux env config."
+     dbg_print "setting Linux env config."
      alias ls='ls --color=auto'
    }
 
@@ -144,21 +163,21 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
    # 1:$USER  2:$tag 3:$shortform 4:$aliasstr 
    save_to_tmp_file_with_tagname() {
      filename1=.$USER-$tagfilenamealiasmap-list.tmp
-     dbg_print echo "all: $@"
+     dbg_print "save_to_tmp_file_with_tagname param: $@"
      echo "$aliasstr" >> ~/$filename1          
    }
 
    #test run for the set alias.
    set_alias() {
-     dbg_print echo "param: $@"
+     dbg_print "param: $@"
      allparams=$@
      shortform=$(echo $allparams | awk '{print $1}')
      pRest=$(echo $allparams | awk '{$1="";print $0}')
-     dbg_print echo "list of param- 1:$shortform Rest:$pRest"
+     dbg_print "list of param- 1:$shortform Rest:$pRest"
      #set the alias in system
-     alias $shortform='$pRest'
+     alias $shortform="$pRest"
      aliasstr="alias '$shortform=$pRest'"
-     dbg_print echo "final str: $aliasstr"
+     dbg_print "final str: $aliasstr"
      save_to_tmp_file_with_tagname $USER $tagfilenamealiasmap $shortform $aliasstr
    }
 
@@ -172,13 +191,27 @@ export PS1="\e[1;32m\u@\h:[\W]$ \e[m"
      fi
    }
 
+   #show summary
+   show_shell_summary() {     
+     dbg_print "summary type [$1]"
+     if [ "$1" == "help" ]
+     then
+         echo "total number of alias :"`alias | wc -l`""
+     fi
+   }
+
    set_common_env_conf() {
-     dbg_print echo "setting generic env config for all OS."
+     dbg_print "setting generic env config for all OS."
      export PATH=$PATH:/opt/local/bin:/opt/local/sbin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin
      set_ssh_alias
+     alias h='history'
      alias pg='ping google.com'
      alias seta=set_alias
      alias gg=load_run_tmp_aliasmaplist
+
+     func1=(show_shell_summary)
+     alias i="$func1 help"
+
    }
 
    set_os_specific_conf() {
