--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -16,7 +16,7 @@ PS1='\[\e[1;32m\]\u@\h\[\e[m\]:\[\e[1;34m\][\W]\[\e[m\]$ '
 
 
 
-## global variables
+## global variables. platform agnostic.
   osname=`uname`
   osname_lowercase=`uname | tr '[:upper:]' '[:lower:]'`
   hostname=`hostname`
