util apis for crypto

--- a/env/for-vim/vimrc.rc
+++ b/env/for-vim/vimrc.rc
@@ -23,3 +23,25 @@ syntax enable
 
 colorscheme evening
 "colorscheme darkblue
+
+set cscopequickfix=s-,c-,d-,i-,t-,e-
+
+
+if has('cscope')
+set cscopetag cscopeverbose
+
+if has('quickfix')
+set cscopequickfix=s-,c-,d-,i-,t-,e-
+endif
+
+cnoreabbrev csa cs add
+cnoreabbrev csf cs find
+cnoreabbrev csk cs kill
+cnoreabbrev csr cs reset
+cnoreabbrev css cs show
+cnoreabbrev csh cs help
+
+command -nargs=0 Cscope cs add $VIMSRC/src/cscope.out $VIMSRC/src
+endif
+
+set tags=./tags,tags;$HOME
