--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -408,7 +408,7 @@ PS1='\[\e[1;32m\]\u@\h\[\e[m\]:\[\e[1;34m\][\W]\[\e[m\]$ '
          echo "external ip:" `myip2`
          mm
          echo "Wireless"$wifiNetworkname
-         echo $listoflocalIPs
+         echo_if_nonempty $listoflocalIPs
          echo "Powered by : "$cpustring
          echo_if_nonempty $macmodelname
          echo "My name is : "$hostfirstname "( $osverstring )"
